--- a/clo/package.json
+++ b/clo/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.4",
+    "express":"~3.4.5",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-twig-render": "^1.0.1",
