--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toulun",
-  "version": "0.1.0",
-  "description": "A tool which make creating simple static web app much easier",
+  "version": "0.1.1",
+  "description": "Just a simple grunt project initializing tool",
   "main": "index.js",
   "bin":"bin/toulun",
   "repository": {
